# loreal_order_finder

./: README.md  loreal_order_finder.py  test_login.py
order_finder/: main.py  pyproject.toml
order_finder/routes/: __init__.py  login.py  search.py
order_finder/testdir/: login_script.py  order_finder_script.py  test.py
