[tool.poetry]
name = "order-finder"
version = "0.1.0"
description = ""
authors = ["Saajan <saajan.n.joshi@gmail.com>"]
readme = "README.md"
packages = [{include = "order_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
requests = "^2.31.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
